--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ComposeTrasteo">
+        <activity
+            android:name=".composeviewmodel.ComposeViewModel"
+            android:exported="true"
+            android:label="@string/title_activity_compose_view_model"
+            android:theme="@style/Theme.ComposeTrasteo.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ListasElementos"
             android:exported="true"
@@ -32,11 +42,7 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ComposeTrasteo.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
