--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext {
         compose_version = '1.0.1'
+        lifecycle_version = '2.4.0-alpha03'
     }
     repositories {
         google()
